www/custom_no_scroll.css
/*
  Author: Shengjin Li
*/

@import url("https://use.typekit.net/vsf0bra.css");

@font-face {
    font-family: customFont;
    font-weight: bold;
    src: url("AboveDemoRegular-lJMd.ttf") format("opentype");
}

/******Framework Formatting*******/

.container-fluid {
  padding:0px;
  height:100vh;
  width:100vw;
  position:fixed;

   background-color: #f7f7f7;
}

.main {
  width:100vw;
  height:100vh;
  overflow:scroll;
}

.row{
  margin: 0;
}


.page {
    height: 95vh;
    width: 100vw;
   padding: 2vh 2vw;
    overflow-y: auto;
    overflow-x: auto;
}

/******Header********/

.header {
  /*position:fixed;
  top:0;*/
  float:left;
  width:100%;
  height:20px;
  text-align:center;
  background-color:rgb(153,0,0);
}

.header_drop {
  float:left;
  display:none;
  width:100%;
  height:300px;
  background-color:rgb(153,0,0);
}

.header:hover {
  background-color:rgb(122, 31, 31);
}

.header_drop h6 {
  padding:10px;
  font-size:12px;
  color:rgb(220,220,220);
}

.header h6 {
  font-family: Arial;
  color:rgb(220,220,220);
  margin:0;
  font-size:10px;
  padding:5px 0;
}

/***********NAV STYLES*************/

.fp-slidesNav {
  left:12px;
  position:fixed;
  z-index:999999;
}

.navbar {
  float:left;
  border:0;
  border-radius:0px;
  z-index: 999;
  background-color: #f7f7f7;
  position:fixed;
  /*top:20px;*/
  width:100%;
  height:60px;
  margin-bottom:0;
  opacity:1;
  
}


.nav_bar_blank {
  width:100%;
  height:50px;
  float:left;
  display:block;
}

/********Title Styles**********/

.title {
  float: left;
  max-width: 400px;
  
    height: auto;
    padding-top: 2vh;
    padding-bottom: 2vh;
    padding-left: 2vw;
    overflow: none;
    font-weight: 800;
    display:inline;
}

.title h1 {
  margin:0;
  color:#565254;
  text-shadow: 0 0 0px #565254;
   color: transparent;
  font-size:30px;
  font-family:'customFont';
}

.title h1 img {
    vertical-align: middle;/*was -8px;*/
    margin-right: 5px;
    height: 4vh;
    min-height: 30px;
} 

/********Col Styles**********/


.col-sm-8{
  width: 74%;
}

.col-sm-3{
  width: 32%;
}

.col-sm-offset-1{
  margin-left: 0;
}

.col-sm-11{
  width: 100%;
}
 /********Page 1 Styles**********/

.landing_page_map {
  display: block;
  margin: auto;
}

.page1 {}

.page1_title {
  padding: 10px;
}

.page1_col{
  float:center;
  display:block;
  
}

.page1_col1 {
  width:25%;
  padding-left: 2%;
  padding-right: 2%;
  /*overflow-y:scroll;*/
  background-color: #565254;
  color: #f7f7f7;
  height: 100%;
}

.page1_col1_heading {
  padding-top: 0;
  padding-bottom: 5px;
  padding-left: 0;
  padding-right: 0;
  background: #f7f7f7;
  color:  #565254;
}

.page1_col1_heading h3{
  font-size: 1.35vw;
  line-height: 1.3em;
  margin-bottom: 0;
  padding: 4%;
}

.page1_col1_heading{
  margin-bottom: 4vh;
}

.page1_col1 h4{
color: #f7f7f7;
   
}

.page1_col2 {
}

.page1_col2_top{
  width:100%;
  height:15%;
}

.page1_text {
  width:45%;
  float:left;
  display:block;
}

.page1_col2_middle_left{
  text-align: left;
    width:65%;

}

.page1_col2_middle_right{
  text-align: left;
    width:35%;
}

.page1 img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.page1_col2_bottom{
  position: relative;
   margin-top: -25vh;
}

.page1_col3 {
}

/********Page 2 Styles**********/
.page2_col {
  width:50%;
  height:100%;
  float:left;
  display:block;
}

.page2_col1 {
  width:70%;
}

.page2_col1_top {
  width:100%;
  height:calc(50% - 1px);
}

.page2_col1_top_left {
  width: 40%;
}

.page2_col1_top_right {
  width: 60%;
}



.page2_col1_top_right_title{
      padding-left: 2vh;
    padding-bottom: 1vw;
}

.hr {
  width:100%;
  border-top:1px solid #eee;
  float:left;
  display:block;
  background-color: #565254;
  height: 1px;
}

.page2_col1_bot {
  width:100%;
  height:calc(50% - 1px);
}

.page2_col1_bot_left {}

.page2_col1_bot_left_title{}

.page2_col1_bot_right {}

.page2_col1_bot_right_title{}

.page2_col2 {
  width:30%;
}

.page2_col2_title {}

.page2_col2_plot {
  width:100%;
  height:95%;
  float:left;
  display:block;
}

/********Page 3 Styles**********/
.page3 {}

.page3_col {
  width:calc(100% / 3);
  height:95%;
  float:left;
  display:block;  
}

.page3_col1 {}

.page3_col2 {
  width:calc(100% / 3 - 1px);
}

.page3_col3 {
  width:calc(100% / 3 - 1px);
}

.page3_col3_top {
  padding: 10px 20px 0px 20px; 
  margin-right: 20px;
}

.page3_col3_bot {
  width:100%;
}


.page3_col2_top {
  width:100%;
  height:50%;
  float:left;
  display:block;
}

.page3_col2_bot {
  width:100%;
  height:calc(50% - 1px);
  float:left;
  display:block;
}

/********Page 4 Styles**********/

.page4 {
  height:95%;
}

/********Shiny Styles**********/

.shiny-input-container {
  float:right;
  height:34px;
  margin:0;
  margin-top:0;
  margin-left:0;
  margin-right:1vw;
  width: 30%;
}

.shiny-input-container:not(.shiny-input-container-inline){
  max-width: none;
  width: 30%;
}

.shiny-input-container br {
  display:none;
}

/********Form Styles**********/
#year_selector {
  width: 100%;
  text-align: center;
  padding-left: 0;
  padding-right: 0;
  }
#year_selector .control-label {
  width: 100%;
  text-align: center;
  font-size: 8px;
  display: flex;
  }
  
.radio-inline input[type=radio] {
  display: none;
  }
.radio-inline input[type=radio]:checked + span{
  background: #565254;
  color: #f7f7f7;

  }
.radio-inline input[type=radio]+ span{
  border: 1px solid #565254;
    line-height: 1.0em;
    padding: .9vh 0.4vw;
    margin-bottom: 2vh;
    background: #f7f7f7;
    color: #565254;
    width: 100%;
    font-size: 1.2em;
  }
  
 .radio-inline {
/*   width: 100%; */
 }
 
.checkbox-inline, .radio-inline{
   padding-left: 0px;
   margin-bottom: 3vh;
   width: 15%;
/*  margin-top: 1vh; */
 }
 
 .checkbox-inline+.checkbox-inline, .radio-inline+.radio-inline {
   margin-left: 0;
 }
 
 .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio]{
   margin-left: 0;
 }
/*******fp-control arrow Styles********/

.fp-controlArrow.fp-prev {
    left: 0;
    border: none;
    width: 20px !important;
    height: 20px;
    background: url(left.png);
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: 100% 100%;
    cursor: pointer;
}
.fp-controlArrow.fp-next {
    right: 0;
    border: none;
    width: 20px;
    height: 20px;
    background: url(right.png);
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: 100% 100%;
    cursor: pointer;
}

/***********leaflet*******/

.leaflet-control-container .leaflet-bottom.leaflet-right {
  display: none;
}

.leaflet-control i {
display: block;
height: 4px;
width: 100%;
}
.leaflet-control.map-title { 
padding: 20px 10px;
font-size: 16px;
font-family: 'Helvetica Neue,Helvetica,Arial,sans-serif';
}


.leaflet-container { 
background: #fff; 
z-index: 0;
}
.leaflet-control {
clear: none;
background: transparent;
box-shadow: 0 0 0 0;
font-size: 8px;
}
.leaflet-left .leaflet-control {
margin: 0;
}



/********Infographic Styling**********/
/**/

/*Styling moved from geoattr.css file*/
.period_text {
  width: 15%;
  margin-right: 2%;
  margin-top: 1%;
  margin-bottom: 1%;
  font-size:0.85em;
  padding: 0.5vw;
  float: left;
  border: solid;
  border-width: 1px;
  background: none;
  color: #565254;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-family:'Work Sans', sans-serif ;
  font-variant: normal; 
  font-weight: 400;
}
.period_text:active{
  outline: none;
  background: #565254;
color: #f7f7f7;
}
.period_text:focus{ /*removing the focus ring from the button element*/
  outline: none;
  
}

.period_text:hover{ /*blurring text on hover*/
background: #565254;
color: #f7f7f7;
}

ul{
  padding-left: 0;
}

/********Topbar Input Styles**********/

.nav_container{
    position: relative;
    width: 60vw;
    max-width: 660px;
    text-align: left;
    padding-top: 10px;
    float: right;
    display: inline-block;
    background-color: #565254;
    color: #f7f7f7;
    padding-left: 10px;
    height: auto;
    padding-bottom: 10px;
    margin-right: 2vw;
}
.prompt_text {
  position:relative;
  display: inline-block;
  font-size:10pt !important;
  padding-left: 3px;
  padding-top: 3px;
}

div.form-group{
  position: relative;
  display:inline-block;
  float: right;
  font-size: 13pt;
  font-weight: 700;
 width: 30%;
}
.dropdown-toggle{
   border: 3px solid #565254;
   border-radius: 0;
   width: 100%;
   padding: 2px 4px;
}

  .bootstrap-select{
      border:  #565254 !important;
  }
  
  .dropdown-toggle:focus{ /*removing the focus ring from the button element*/
  outline: none;
}
.dropdown-toggle:active{ /*removing the focus ring from the button element*/
  outline: none;
}

.dropdown {
  width:100%;
  border:  #565254;
 
}

/********** FONTS ***********/
p, blockquote, pre, .radio-inline{
 font-family: 'Work Sans', sans-serif;
 color: #cccccc;
 font-size: 1.0vh;
}

h1, h2, h3, h4, h5, h6 {
font-family: urw-din, sans-serif;
font-weight: 200;
font-style: normal;
color: #565254;
font-size: 1.0vh;
}

h1{
 font-size: 0.8em;

}

h2{
 font-size: 1.0em;

}

h3{
 font-size: 1.0em;
 line-height: 1.5em;
}

h4{
 font-size: 0.9em;
 line-height: 1.4em;
 font-weight: 400;
}

h5{
 font-size: 13px;
}

h6{
 font-size: 12px;
}


blockquote {
  font-size: 21px;
  line-height: 30px; 
}

pre {
  font-size: 13px;
  line-height: 18.5714px; 
}

#textDescription p{
  font-size: 0.8em;
}

#textMortFactsClosing h4{
  font-size: 0.4em;
}

li h4{
  margin-bottom: 0 px;
  

}

/********Misc Styles**********/

.s2 {
  width:100vw;
  height:100vh;
}

.info {
padding-right: 2px;
width: 40px;
}

.control-label {
  display:none;
  margin:0;
}

.dropdown {
  width:100%;
}




.page_select {
  width:100px;
  height:50px;
  background-color:#565254;
}

.vl {
  float:left;
  display:block;
  width:1px;
  height:100%;
  background-color:rgb(235,235,235);
}

.word_redBG {
  padding: 3px 1px 1px 1px;
  background-color:#565254;
  color:#f7f7f7;
  border-radius:8px;
}

.s1 {
  width:100vw;
  height:100vh;
  overflow:scroll;
  z-index:9999999;
}

#nation_state_infographic img{
  margin-top: -4vh;
}

.IDEA_Logo_Wrapper{
  position: relative;
    width: 100%;
    padding-left: 20%;
    padding-right: 20%;
    padding-top: 4%;
    text-align: left;
    bottom: 9%;
    left: 0;
}

